@@ -1,9 +1,15 @@
+
+-added 'show_tags_during_review' option to config.py in order to be able
+ to hide the tags in the review window. Let me know if you use it, so that I
+ can make this more visible if more people use it (requested by Sander 
+ Hoogendoorn).
+-Build system fixes (James Litton)
+
 -Make dialog titles more consistent (reported by Troy Guze).
 -Don't create a silly popup menu saying 'toolBar' when right clicking on
  the toolbar (reported by Troy Guze).
 -Make grade shortcuts work in cramming scheduler (<=1 for pass) 
  (reported by Troy Guze).
-	
 -The enter and escape keys now work again to close the preview dialog
 -More scheduler tweaks.
 -More in-program help.
